[gd_scene load_steps=2 format=3 uid="uid://b83b02umlplxk"]

[ext_resource type="Script" path="res://menuPrincipal.gd" id="1_e00e4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e00e4")

[node name="criarServidor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Criar Servidor"

[node name="entrarServidor" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 24.0
offset_right = 58.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Entrar Servidor"

[connection signal="pressed" from="criarServidor" to="." method="_on_criar_servidor_pressed"]
[connection signal="pressed" from="entrarServidor" to="." method="_on_entrar_servidor_pressed"]
